Fix dark mode issues caused by code factorisation + misc dark mode fixes

--- a/src/css/games/aero.less
+++ b/src/css/games/aero.less
@@ -1,6 +1,18 @@
 @import "./common";
 
 html[data-theme=dark] {
+
+	#page-title,
+	#maingameview_menuheader,
+	#maingameview_menufooter {
+		border: 1px solid var(--dark-40);
+	}
+
+	#maingameview_menuheader {
+		border-top: none;
+		top: -1px;
+	}
+
 	.aero-jail {
 		color: var(--blue-70);
 	}
