--- a/src/css/games/bordeaux.less
+++ b/src/css/games/bordeaux.less
@@ -18,10 +18,7 @@ html[data-theme=dark] {
 		color: var(--light-80);
 	}
 
-	.tooltip_bigtitle {
-		color: #ac7920;
-	}
-
+	.tooltip_bigtitle,
 	.tooltip_subtitle {
 		color: #ac7920;
 	}
