--- a/src/css/games/draculahelsing.less
+++ b/src/css/games/draculahelsing.less
@@ -1,6 +1,18 @@
 @import "./common";
 
 html[data-theme=dark] {
+
+	#page-title,
+	#maingameview_menuheader,
+	#maingameview_menufooter {
+		border: 1px solid var(--dark-40);
+	}
+
+	#maingameview_menuheader {
+		border-top: none;
+		top: -1px;
+	}
+
 	.dh_board_title_graf {
 		filter: var(--highlight);
 	}
